--- a/10 практика верстка/index.html
+++ b/10 практика верстка/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Мой первый сайт на GitHub Pages">
     <title>Мой первый деплой</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚀</text></svg>">
@@ -16,17 +17,17 @@
     <main>
         <section>
             <h2>О проекте</h2>
-            <p>Проект создан в образовательных целях все совпадения случайны.</p>
+            <p>Здесь я учусь публиковать сайты в интернете.</p>
         </section>
         
         <section>
             <h2>Картинка с lazy loading</h2>
-            <img src="images/sample.jpeg" alt="Пример изображения" loading="lazy" width="600" height="400">
+            <img src="images/sample.jpg" alt="Пример изображения" loading="lazy" width="600" height="400">
         </section>
         
         <section>
             <h2>Тест JavaScript</h2>
-            <button id="testButton">Нажми меня</button>
+            <button id="testButton" type="button">Нажми меня</button>
             <p id="output"></p>
         </section>
     </main>
