--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         
         <section>
             <h2>Картинка с lazy loading</h2>
-            <img src="images/sample.jpg" alt="Пример изображения" loading="lazy" width="600" height="400">
+            <img src="sample.jpg" alt="Пример изображения" loading="lazy" width="600" height="400">
         </section>
         
         <section>
